Close context menu when showing voice search

The context menu is a ViewController presented by BVC. When BVC tries to
present the voice search ViewController, it is silently failing as it is
already presenting something.
This CL closes the context menu before launching voice search.

Bug: 768846
Change-Id: I653a0e03feb6bcdcd07d525b00dd4bd9c8629fe8
Reviewed-on: https://chromium-review.googlesource.com/684838
Reviewed-by: Olivier Robin <olivierrobin@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#504592}
Former-commit-id: 6d230681ae201ff9d479139c8fa5f98701e7dfc2